--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "bootstrap": "^5.0.2",
     "gatsby": "^3.9.0",
+    "gatsby-plugin-twitter": "^3.9.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.1"
   }
 }
