--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-twitter": "^3.9.0",
     "react": "^17.0.1",
     "react-bootstrap": "^2.0.0-beta.4",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-router": "^5.2.0"
   }
 }
